<resources>
    <string name="app_name">WhereIsMyFood</string>
    <string name="show_logo_of_application">Show logo of application.</string>
    <string name="shows_arrow_on_title_tag">shows arrow on title tag</string>

    <string name="user_title">Sign Up as User</string>
    <string name="vendor_title">Sign Up as Vendor</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_signup">SignUp</string>
    <string name="hint_vendor_name">Vendor Name</string>
    <string name="hint_phone">Phone Number</string>

    <!--Toast Messages-->
    <string name="toast_no_internet">No Internet Connection Available</string>
    <string name="toast_no_firstname">First Name is Required</string>
    <string name="toast_no_vname">Vendor Name is Required</string>
    <string name="toast_first_name_length_invalid">Please Enter First Name Between 2 To 30 Characters!</string>
    <string name="toast_v_name_length_invalid">Please Enter Vendor Name Between 2 To 30 Characters!</string>
    <string name="toast_last_name_length_invalid">Please Enter Last Name Between 2 To 30 Characters!</string>

    <string name="toast_no_valid_firstname">Please Enter Valid First Name</string>
    <string name="toast_no_phone">Please Enter Phone Number.</string>
    <string name="toast_no_valid_vname">Please Enter Valid Vendor Name</string>
    <string name="toast_no_valid_lastname">Please Enter Valid Last Name</string>
    <string name="toast_no_email">Email is Required</string>
    <string name="toast_email_format_wrong">Email is Invalid</string>
    <string name="toast_no_password">Password is Required</string>
    <string name="toast_password_length_invalid">Please Enter Password Between 8 To 30 Characters!</string>
    <string name="toast_new_password_length_invalid">Please Enter New Password Between 8 To 30 Characters!</string>
    <string name="toast_no_valid_password">Please Enter Valid Password</string>
    <string name="toast_no_valid_new_password">Please Enter Valid New Password</string>
    <string name="toast_no_valid_confirm_password">Please Enter Valid Confirm Password</string>
    <string name="toast_no_confirm_password">Confirm Password is Required</string>
    <string name="toast_password_mismatch">Please Enter Same Password</string>
    <string name="internetmsg">Please check your Internet Connection</string>
    <string name="str_something_went_worng">Server is not responding. Please try again after sometime.</string>
    <string name="toast_invalid_phone">Invalid Phone number.</string>
    <string name="edit_profile_first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="cnfrm_new_pwd">Confirm New Password</string>
    <string name="str_addresses">Addresses</string>

    <string name="no_account">Don\'t have an account?</string>
    <string name="str_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="str_logout">Logout</string>
    <string name="exit_alert_string">Do you want to exit ?</string>
    <string name="set_yes">Yes</string>
    <string name="set_no">No</string>
    <string name="toast_no_new_password">New password is required.</string>
    <string name="str_edt_profile">Edit Profile</string>
    <string name="text_Save">Save</string>
    <string name="hint_suite_no">Suite/apt Number</string>
    <string name="hint_street">Street name</string>
    <string name="hint_city">City</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="hint_province">Province</string>
    <string name="cancel">Cancel</string>
    <string name="no_suite_no">Suite number is required.</string>
    <string name="toast_suite_length_invalid">Please Enter suite number Between 2 To 30 Characters!</string>
    <string name="toast_city_length_invalid">Please Enter city Between 2 To 30 Characters!</string>
    <string name="toast_province_length_invalid">Please Enter province Between 2 To 30 Characters!</string>
    <string name="toast_no_street">Enter Street Name.</string>
    <string name="invalid_street_name">Enter Valid Street name.</string>
    <string name="no_zipcode">Enter zipcode.</string>
    <string name="invalid_zipcode">Invalid zip code.</string>
    <string name="no_city">Enter city.</string>
    <string name="no_province">Enter province.</string>
    <string name="hint_name">Name</string>
    <string name="toast_no_name">Enter Name.</string>
    <string name="str_subscription_name">Subscription name</string>
    <string name="str_add_photo">Add photo</string>
    <string name="str_description">Description</string>
    <string name="str_monday">Monday</string>
    <string name="str_dish_name">Dish name</string>
    <string name="str_ingredients">Ingredients</string>
    <string name="str_price">Price</string>
    <string name="str_tuesday">Tuesday</string>
    <string name="str_wednesday">Wednesday</string>
    <string name="str_thursday">Thursday</string>
    <string name="str_friday">Friday</string>
    <string name="str_saturday">Saturday</string>
    <string name="str_sunday">Sunday</string>
    <string name="str_enter_valid_subscription_name">Enter valid subscription name</string>
    <string name="str_invalid_description">Enter valid description.</string>
    <string name="str_enter_price">Enter price.</string>
    <string name="str_no_dish_name">Enter dish name.</string>
    <string name="str_invalid_dish_name">Enter valid dish name.</string>
    <string name="str_no_description">Enter description for dish.</string>
    <string name="str_no_ingredients">Enter ingredients.</string>
    <string name="str_invalid_ingredients">Enter valid ingredients</string>
    <string name="str_add_sub">Add Subscription</string>
    <string name="take_photo">Take photo</string>
    <string name="from_library">Choose from library</string>
    <string name="add_pic">Add photo!</string>
    <string name="allow">Allow</string>
    <string name="permission_never_asked">Permission has not been granted, please allow it.</string>
    <string name="image_not_loaded">Image is not loaded</string>
    <string name="invalid_image_file">Please select valid image file.</string>
    <string name="read_image_fail">Failed to read image</string>
    <string name="logout_prompt">Do you want to logout?</string>
    <string name="str_home">Home</string>
    <string name="str_description_">Description :</string>
    <string name="str_ingredients_list">Ingredients list :</string>
    <string name="str_dish_name_">Dish Name :</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_checkout">Checkout</string>
    <string name="str_receiver_s_name">Receiver\'s name</string>
    <string name="str_select_days">Select days.</string>
    <string name="str_select_time">Select time for receiving meal.</string>
    <string name="str_canada">Canada</string>
    <string name="invalid_receiver_name">Enter valid receiver name.</string>
    <string name="str_select_day">Select at least one day to proceed.</string>
    <string name="str_invalid_time">Select time to continue.</string>
    <string name="text_comment">Comment</string>
    <string name="str_write_a_review">Write a review</string>
    <string name="str_order_history">Order history</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="str_no_orders_found">No orders found!!</string>
    <string name="str_current_order">Active Orders</string>

</resources>